# hadesbot

./: .env  Cargo.toml  tokens.json
src/: main.rs  mainBak2.bak  utils.rs
