[package]
name = "eth_keypair_generator_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.18.0"
tokio = { version= "1", features = ["full"] }
web3_rust_wrapper = {git = "https://github.com/Nikola43/web3helper.git", branch = "main"}
serde_json = "1.0.81"
colored = "2.0.0"
rpassword = "6.0.1"
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
anyhow = "1.0"
rand = "0.8"
clap = { version = "3.1.18", features = ["derive"] }
