[package]
name = "hades"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3_rust_wrapper = "0.4.2"
hex = "0.4"
web3 = "0.18.0"
tokio = { version= "1", features = ["full"] }
dotenv = "0.15.0"
ethereum_abi = "0.4.0"
serde_json = "1.0.81"
primitive-types = "0.11.1"
diesel = { version = "1.4.8", features = ["sqlite"] }
serde = "1.0.137"
clap = { version = "3.1.18", features = ["derive"] }
colored = "2.0.0"
chrono = "0.4.19"
webbrowser = "0.7.1"
textplots = "0.8.0"